# cdylib-shim

./: Cargo.toml  LICENSE  README.md
crates/cdylib-shim/: Cargo.toml
crates/cdylib-shim-macros/: Cargo.toml  README.md
crates/cdylib-shim-macros/src/: lib.rs
crates/cdylib-shim/src/: lib.rs  private.rs
crates/shim/: Cargo.toml
crates/shim-macros/: Cargo.toml
crates/shim-macros/src/: lib.rs
crates/shim/src/: lib.rs
examples/version/: Cargo.toml
examples/version/src/: lib.rs
shim/: Cargo.toml
shim-codegen/: Cargo.toml
shim-codegen/src/: config.rs  lib.rs  library.rs
shim-core/: Cargo.toml
shim-core/src/: lib.rs
shim-derive/: Cargo.toml
shim-derive/src/: config.rs  lib.rs
shim/src/: entry.rs  lib.rs  library.rs
version/: Cargo.toml
version/src/: lib.rs
