[package]
name = "shim-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
quote = "1.0.18"
syn = { version = "1.0.91", features = ["extra-traits"] }
widestring = "0.5.1"
winapi = { version = "0.3.9", features = ["sysinfoapi", "libloaderapi"] }
