[package]
name = "cdylib-shim-macros"
version = "0.1.2"
authors = ["direct <github@itsdirect.dev>"]
edition = "2024"
description = "A macro for creating dynamic library shims that can intercept and modify function calls"
license = "MIT"
repository = "https://github.com/itsdirect/cdylib-shim"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
itertools = "0.14.0"
object = "0.36.7"
proc-macro2 = "1.0.94"
quote = "1.0.40"

[dependencies.syn]
version = "2.0.100"
features = ["full"]
