[package]
name = "cdylib-shim"
version = "0.1.0"
authors = ["direct <github@itsdirect.dev>"]
edition = "2024"
description = "A macro for creating dynamic library shims that can intercept and modify function calls"
license = "MIT"
repository = "https://github.com/itsdirect/cdylib-shim"
readme = "../../README.md"

[dependencies]
cdylib-shim-macros = { version = "0.1.0", path = "../cdylib-shim-macros" }

[dependencies.winapi]
version = "0.3.9"
features = ["sysinfoapi", "libloaderapi"]
